# arkfunds-python

./: .readthedocs.yml  README.md  README.rst  pyproject.toml  woo.py
arkfunds/: __init__.py  arkfunds.py  etf.py  stock.py  utils.py  yahoo.py
docs/: conf.py  getting-started.rst  index.rst  reference.rst
tests/: test_etf.py  test_stock.py
