[tool.poetry]
name = "arkfunds"
version = "0.1.1"
description = "Python library for monitoring Ark Invest funds data."
repository = "https://github.com/frefrik/python-arkfunds"
readme = "README.md"
keywords = ["ark invest", "ark funds", "etf", "funds", "finance"]
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
packages = [
    { include = "arkfunds" },
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
