[tool.poetry]
name = "arkfunds"
version = "0.3.0"
description = "Python library for monitoring Ark Invest funds data."
repository = "https://github.com/frefrik/arkfunds-python"
readme = "README.md"
keywords = ["ark", "ark invest", "ark funds", "etf", "funds", "finance"]
authors = ["Fredrik Haarstad <codemonkey@zomg.no>"]
license = "MIT"
packages = [
    { include = "arkfunds" },
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
requests = "^2.26.0"
pandas = "^1.3.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
pylint = "^2.9.6"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
